--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "think1st-task",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mizdebski77.github.io/Training-App/",
   "dependencies": {
     "@tanstack/react-query": "^5.28.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,6 +13,7 @@
     "@types/react": "^18.2.65",
     "@types/react-dom": "^18.2.22",
     "axios": "^1.6.7",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
